[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herethere"
dynamic = ["version"]
description = "herethere"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "b3b", email = "ash.b3b@gmail.com" },
]
license = "MIT"
keywords = [
    "ssh",
    "asyncssh",
    "jupyter",
    "ipython",
    "ipython-magic",
    "jupyter-magic",
    "remote-python",
    "remote-repl",
    "remote-debugging",
    "repl",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "asyncssh>=2.17,<3",
    "click",
    "python-dotenv",
]

[project.optional-dependencies]
magic = [
    "ipython",
    "ipywidgets",
    "nest-asyncio2==1.7.2",
]

[dependency-groups]
dev = [
    "build",
    "codecov",
    "docutils",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://github.com/b3b/herethere"

[tool.setuptools.dynamic]
version = { attr = "herethere.version.__version__" }

[tool.setuptools.packages.find]
include = ["herethere*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.pylint.main]
fail-under = 10.0
ignore = ["migrations"]
py-version = "3.10"

[tool.pylint."messages control"]
disable = [
  "attribute-defined-outside-init",
  "bad-inline-option",
  "deprecated-pragma",
  "file-ignored",
  "import-outside-toplevel",
  "invalid-name",
  "locally-disabled",
  "missing-function-docstring",
  "missing-module-docstring",
  "protected-access",
  "raw-checker-failed",
  "redefined-outer-name",
  "suppressed-message",
  "too-few-public-methods",
  "unused-argument",
  "unused-wildcard-import",
  "use-symbolic-message-instead",
  "useless-suppression",
  "wildcard-import",
]
enable = ["c-extension-no-member"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # import sorting
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "TRY",  # exception handling checks
    "PL",   # pylint-style checks supported by Ruff
]
ignore = [
    "TRY003", # allow direct exception messages in this small library
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR0913", # parametrized tests naturally pass several fixtures/values
    "PLR2004", # literal expected values are readable in tests
    "PLW0603", # tests may intentionally exercise global namespace behavior
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
